
syntax = "proto3";

package api.core.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/tkeel-io/core/api/core/v1;v1";
option java_multiple_files = true;
option java_package = "api.core.v1";

service Search {
	rpc Index (IndexObject) returns (IndexResponse) {
		option (google.api.http) = {
			post : "/index"
			body : "obj"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Index a object";
            operation_id: "IndexObject";
            tags: "Search";
            responses: {
              key: "200"
              value: {
                description: "OK";
              }
            }
          };
	};
	rpc Search (SearchRequest) returns (SearchResponse) {
		option (google.api.http) = {
			post : "/search"
			body: "*"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Search objects by keyword";
            operation_id: "SearchObjects";
            tags: "Search";
            responses: {
              key: "200"
              value: {
                description: "OK";
              }
            }
          };
	};
  rpc DeleteByID(DeleteByIDRequest) returns (DeleteByIDResponse) {
		option (google.api.http) = {
			delete : "/search"
		};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Delete objects by id";
            operation_id: "SearchObjects";
            tags: "Search";
            responses: {
              key: "200"
              value: {
                description: "OK";
              }
            }
          };
  }
}

message IndexObject {
    google.protobuf.Value obj = 1;
}

message IndexResponse {
    string status = 1;
}

message SearchCondition {
    string field = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "entity property key"}];
    string operator = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "operator $gt $gte $eq $lt $lte "}];
    google.protobuf.Value value = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "value of the key"}];
}

message SearchRequest {
    string source = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "source id"}];
    string owner = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "owner id"}];
    string query = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "search keyword"}];
    repeated SearchCondition condition = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "conditions list"}];
    int32 page_num= 7 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "记录开始位置"}];
    int32 page_size = 8 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "每页限制条数"}];
    string order_by = 9 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "排序字段"}];
    bool is_descending = 10 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "是否逆序， false：不逆序，true:逆序"}];
}

message SearchResponse {
    int32 total = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "count of the results"}];
    int32 page_num= 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "记录开始位置"}];
    int32 page_size = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "每页限制条数"}];
    repeated google.protobuf.Value items = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "items of the results"}];
}



message DeleteByIDRequest {
    string id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "entity id"}];
    string source = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "source id"}];
    string owner = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "owner id"}];
}

message DeleteByIDResponse {}